--- a/DFT.html
+++ b/DFT.html
@@ -12,7 +12,7 @@ layout: default
             </div>
         </div>
         <div class="sidebar">
-            <a href="index.html" class="active">
+            <a href="index.html">
                 <h3>Home Page</h3>
             </a>
             <a href="CrossCorr.html" class="">
@@ -27,7 +27,7 @@ layout: default
             <a href="CircularConvolution.html" class="">
                 <h3>Circular Convolution</h3>
             </a>
-            <a href="DFT.html" class="">
+            <a href="DFT.html" class="active">
                 <h3>Discrete Fourier Transform</h3>
             </a>
             <a href="IDFT.html" class="">
