--- a/Properties.html
+++ b/Properties.html
@@ -3,94 +3,144 @@ title: Properties
 layout: default
 ---
 <div class="container">
-    {% include scrollbar.html %}
-    <main>
-        <h2 style="text-align: center;">Properties of DFT</h2><br>
-        <p>All of these properties of the discrete Fourier transform (DFT) are applicable for discrete-time signals that have a DFT.
-            Meaning these properties of DFT apply to any generic signal x(n) for which an X(k) exists. 
-            <pre>(x(n) <img src="assets/leftrightarrow.png" alt="..." style="width: 10%;">  X(k))</pre> where X(k)= ∑<sub>n=0</sub><sup>N-1</sup> x(n) e<sup>-2πjkn/N</sup>.</p><br>
-        <table>
-        <tbody>
-        <tr>
-        <td><b>Property</b></td>
-        <td><b>Mathematical Representation</b></td>
-        </tr>
-        <tr>
-        <td>Linearity</td>
-        <td>a<sub>1</sub>x<sub>1</sub>(n)+a<sub>2</sub>x<sub>2</sub>(n) <img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> a<sub>1</sub>X<sub>1</sub>(k) + a<sub>2</sub>X<sub>2</sub>(k)</td>
-        </tr>
-        <tr>
-        <td>Periodicity</td>
-        <td>if x(n+N) = x(n) for all n<p></p>
-        <p>then x(k+N) = X(k) for all k</p></td>
-        </tr>
-        <tr>
-        <td>Time reversal</td>
-        <td>x(N-n) <img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> X(N-k)</td>
-        </tr>
-        <tr>
-        <td>Duality</td>
-        <td>x(n) <img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> Nx[((-k))<sub>N</sub>]</td>
-        </tr>
-        <tr>
-        <td>Circular convolution</td>
-        <td><img src="assets/circular-convolution-property-of-DFT.webp" class="mx-auto d-block" alt="..." style="width: 75%; height: 50%;"></td>
-        </tr>
-        <tr>
-        <td>Circular correlation</td>
-        <td>For x(n) and y(n), circular correlation r<sub>xy</sub>(l) is<p></p>
-        <p>r<sub>xy</sub>(l) <img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> R<sub>xy</sub>(k) = X(k).Y*(k)</p></td>
-        </tr>
-        <tr>
-        <td>Circular frequency shift</td>
-        <td>x(n)e<sup>2πjln/N</sup> <img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> X(k+l)<p></p>
-        <p>x(n)e<sup>-2πjln/N</sup> <img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> X(k-l)</p></td>
-        </tr>
-        <tr>
-        <td>Circular time shift</td>
-        <td>x((n-l))N = x(n-l)<img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> X(k)e<sup>-2πjlk/N</sup><p></p>
-        <p>or X(k)W<sup>kl</sup><sub>N </sub>where W is the twiddle factor.</p></td>
-        </tr>
-        <tr>
-        <td>Circular symmetries of a sequence</td>
-        <td>If the circular shift is in<p></p>
-        <ul style="text-align: left;">
-            <li>anti-clockwise direction (positive): Delayed discrete-time signal</li>
-            <li>clockwise direction (negative): Advanced discrete-time signal</li>
-            <li>Time reversal: Obtained by reversing samples of the discrete-time sequence about zero axis/locating x(n) in a clockwise direction.</li>
-        </ul>
-        </td>
-        </tr>
-        <tr>
-        <td>Multiplication</td>
-        <td><img src="./assets/multiplication-property-of-dft.webp" class="mx-auto d-block" alt="..." style="width: 75%; height: 50%;"> </td>
-        </tr>
-        <tr>
-        <td>Complex conjugate</td>
-        <td>x*(n) <img src="assets/leftrightarrow.png" alt="..." class="mx-auto d-block" style="width: 10%;"> X*(N-k)</td>
-        </tr>
-        <tr>
-        <td>Symmetry</td>
-        <td>For even sequences:<p></p>
-        <p>X(k) = ∑<sub>n=0</sub><sup>N-1</sup> x(n)Cos(2πnk/N)</p>
-        <p>For odd sequences:</p>
-        <p>X(k) = ∑<sub>n=0</sub><sup>N-1</sup> x(n)Sin(2πnk/N)</p></td>
-        </tr>
-        <tr>
-        <td>Parseval’s theorem</td>
-        <td>∑<sub>n=0</sub><sup>N-1</sup> x(n).y*(n) = (1/N)∑<sub>n=0</sub><sup>N-1</sup> X(k).Y*(k)</td>
-        </tr>
-        </tbody>
-        </table><br><br>
-    </main>
-    <div class="right">
+    <aside>
         <div class="top">
-            <button id="menu-btn">
-                <span class="material-symbols-sharp">menu</span>
-            </button>
-            <div class="theme-toggler">
-                <span class="material-symbols-sharp active">light_mode</span>
-                <span class="material-symbols-sharp">dark_mode</span>
+            <h2>DSP</h2>
+            <div class="close" id="close-btn">
+                <span class="material-symbols-sharp">close</span>
+            </div>
+        </div>
+        <div class="sidebar">
+            <a href="index.html" class="">
+                <h3>Home Page</h3>
+            </a>
+            <a href="CrossCorr.html" class="">
+                <h3>Cross Correlation</h3>
+            </a>
+            <a href="AutoCorr.html" class="">
+                <h3>Auto Correlation</h3>
+            </a>
+            <a href="LinearConvolution.html" class="">
+                <h3>Linear Convolution</h3>
+            </a>
+            <a href="CircularConvolution.html" class="">
+                <h3>Circular Convolution</h3>
+            </a>
+            <a href="DFT.html" class="">
+                <h3>Discrete Fourier Transform</h3>
+            </a>
+            <a href="IDFT.html" class="">
+                <h3>Inverse Discrete Fourier Transform</h3>
+            </a>
+            <a href="Properties.html" class="active">
+                <h3>DFT & IDFT Properties</h3>
+            </a>
+            <a href="Linearity.html" class="">
+                <h3>Linearity Property</h3>
+            </a>
+            <a href="LinearConvolutionUsingDFT&IDFT.html" class="">
+                <h3>Linear Convolution Property</h3>
+            </a>
+            <a href="CircularConvolutionUsingDFT&IDFT.html" class="">
+                <h3>Circular Convolution Property</h3>
+            </a>
+            <a href="CircularTimeShift.html" class="">
+                <h3>Circular Timeshift Property</h3>
+            </a>
+            <a href="Modulation.html" class="">
+                <h3>Modulation Property</h3>
+            </a>
+        </div>
+    </aside>
+    <div class="flex-container">
+        <main>
+            <h2 style="text-align: center;">Properties of DFT</h2><br>
+            <p>All of these properties of the discrete Fourier transform (DFT) are applicable for discrete-time signals that have a DFT.
+                Meaning these properties of DFT apply to any generic signal x(n) for which an X(k) exists. 
+                <pre>(x(n) <img src="assets/leftrightarrow.png" alt="..." style="width: 10%;">  X(k))</pre> where X(k)= ∑<sub>n=0</sub><sup>N-1</sup> x(n) e<sup>-2πjkn/N</sup>.</p><br>
+            <table>
+            <tbody>
+            <tr>
+            <td><b>Property</b></td>
+            <td><b>Mathematical Representation</b></td>
+            </tr>
+            <tr>
+            <td>Linearity</td>
+            <td>a<sub>1</sub>x<sub>1</sub>(n)+a<sub>2</sub>x<sub>2</sub>(n) <img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> a<sub>1</sub>X<sub>1</sub>(k) + a<sub>2</sub>X<sub>2</sub>(k)</td>
+            </tr>
+            <tr>
+            <td>Periodicity</td>
+            <td>if x(n+N) = x(n) for all n<p></p>
+            <p>then x(k+N) = X(k) for all k</p></td>
+            </tr>
+            <tr>
+            <td>Time reversal</td>
+            <td>x(N-n) <img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> X(N-k)</td>
+            </tr>
+            <tr>
+            <td>Duality</td>
+            <td>x(n) <img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> Nx[((-k))<sub>N</sub>]</td>
+            </tr>
+            <tr>
+            <td>Circular convolution</td>
+            <td><img src="assets/circular-convolution-property-of-DFT.webp" class="mx-auto d-block" alt="..." style="width: 75%; height: 50%;"></td>
+            </tr>
+            <tr>
+            <td>Circular correlation</td>
+            <td>For x(n) and y(n), circular correlation r<sub>xy</sub>(l) is<p></p>
+            <p>r<sub>xy</sub>(l) <img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> R<sub>xy</sub>(k) = X(k).Y*(k)</p></td>
+            </tr>
+            <tr>
+            <td>Circular frequency shift</td>
+            <td>x(n)e<sup>2πjln/N</sup> <img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> X(k+l)<p></p>
+            <p>x(n)e<sup>-2πjln/N</sup> <img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> X(k-l)</p></td>
+            </tr>
+            <tr>
+            <td>Circular time shift</td>
+            <td>x((n-l))N = x(n-l)<img src="assets/leftrightarrow.png" class="mx-auto d-block" alt="..." style="width: 10%;"> X(k)e<sup>-2πjlk/N</sup><p></p>
+            <p>or X(k)W<sup>kl</sup><sub>N </sub>where W is the twiddle factor.</p></td>
+            </tr>
+            <tr>
+            <td>Circular symmetries of a sequence</td>
+            <td>If the circular shift is in<p></p>
+            <ul style="text-align: left;">
+                <li>anti-clockwise direction (positive): Delayed discrete-time signal</li>
+                <li>clockwise direction (negative): Advanced discrete-time signal</li>
+                <li>Time reversal: Obtained by reversing samples of the discrete-time sequence about zero axis/locating x(n) in a clockwise direction.</li>
+            </ul>
+            </td>
+            </tr>
+            <tr>
+            <td>Multiplication</td>
+            <td><img src="./assets/multiplication-property-of-dft.webp" class="mx-auto d-block" alt="..." style="width: 75%; height: 50%;"> </td>
+            </tr>
+            <tr>
+            <td>Complex conjugate</td>
+            <td>x*(n) <img src="assets/leftrightarrow.png" alt="..." class="mx-auto d-block" style="width: 10%;"> X*(N-k)</td>
+            </tr>
+            <tr>
+            <td>Symmetry</td>
+            <td>For even sequences:<p></p>
+            <p>X(k) = ∑<sub>n=0</sub><sup>N-1</sup> x(n)Cos(2πnk/N)</p>
+            <p>For odd sequences:</p>
+            <p>X(k) = ∑<sub>n=0</sub><sup>N-1</sup> x(n)Sin(2πnk/N)</p></td>
+            </tr>
+            <tr>
+            <td>Parseval’s theorem</td>
+            <td>∑<sub>n=0</sub><sup>N-1</sup> x(n).y*(n) = (1/N)∑<sub>n=0</sub><sup>N-1</sup> X(k).Y*(k)</td>
+            </tr>
+            </tbody>
+            </table><br><br>
+        </main>
+        <div class="right">
+            <div class="top">
+                <button id="menu-btn">
+                    <span class="material-symbols-sharp">menu</span>
+                </button>
+                <div class="theme-toggler">
+                    <span class="material-symbols-sharp active">light_mode</span>
+                    <span class="material-symbols-sharp">dark_mode</span>
+                </div>
             </div>
         </div>
     </div>
