--- a/impulseinvariant.html
+++ b/impulseinvariant.html
@@ -96,7 +96,7 @@ layout: default
             <a href="bilinear.html" class="">
                 <h3>Bilinear Transformation</h3>
             </a>
-            <a href="impulseinvariant.html" class="active">
+            <a href="impulseinvariant.html" class="">
                 <h3>Impulse Invariant</h3>
             </a>
             <a href="FIR.html" class="">
