--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ layout: default
             <a href="aprderivatives.html" class="">
                 <h3>Approximation of Derivatives</h3>
             </a>
-            <a href="windows.html" class="active">
+            <a href="windows.html" class="">
                 <h3>Window Techniques</h3>
             </a>
             <a href="butterworth.html" class="">
